--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="paragraph">Number 1 - I'm a class!</p>
     <div id="num2">Number 2 - I'm one ID.</div>
-    <p class="paragraph">Number 3 - I'm a class, but cooler!</p>
+    <p class="paragraph size24px">Number 3 - I'm a class, but cooler!</p>
     <div id="num4">Number 4 - I'm another ID.</div>
     <p class="paragraph">Number 5 - I'm a class!</p>
   </body>
